# nessie-relationaldb-datasource-plugin

./: .gitignore  README.md  pyproject.toml
src/nessie_relationaldb_datasource_plugin/: __init__.py  relationaldb_plugin.py
src/nessie_relationaldb_datasource_plugin/tests/: conftest.py  example.py  seed_all.py  test_relationaldb_plugin.py
src/nessie_relationaldb_datasource_plugin/tests/data/: company.db  ecommerce.db  game.db  hospital.db  library.db  logistics.db  music.db  real_estate.db  social_network.db  university.db
